Changelog
=========

4.3.3 (unreleased)
------------------

- Nothing changed yet.


4.3.2 (2025-07-02)
------------------

- Added support for License-Expression as per PEP 639.


4.3.1 (2025-07-01)
------------------

- Deprecation warnings? For the packaging configuration? What was I thinking?
  I'm instead adding a rating telling people that they should add a
  pyproject.toml. Much nicer.


4.3 (2025-07-01)
----------------

- Added a --skip-tests parameter to allow skipping of certain tests.
  You shouldn't skip tests, of course, but now you can. This is actually
  only implemented so that I can add a test using check-manifest and
  skip it when run from the zest.releaser hook.

- If you also have check-manifest installed, pyroma will run that as a test.
  No longer do you need to call it separately! However, if Pyroma is invoked
  from zest.releaser, it will not be run, because check-manifest has a separate
  hook for zest.releaser, so that would run it twice.

- Allow private classifiers [hugovk]

- Using tox to run tests [hugovk]

- Deperating the support for setup.py


4.2 (2023-02-25)
----------------

- Fall back to installing project's build backend in an isolated environment
  if a compatible version isn't installed in the current env [CAM-Gerlach]

- Fix metadata extraction failure when project ``long_description`` is included
  as a header rather than a payload in the ``METADTA`` file [CAM-Gerlach]

- Add a fallback to restore compatibility with Setuptools <61 [CAM-Gerlach]

- Fix tests failing due to invalid versions on Setuptools >=66 [CAM-Gerlach]

- Add ``python_requires``, update classifiers, add implicit dependencies
  and remove unused deps in Pyroma's own packaging metadata [CAM-Gerlach]


4.1 (2022-11-24)
----------------

- Moved from a custom trove classifiers list to using the trove-classifiers
  package [hugovk]

- Support checking the Requires-Python metadata [davidandreoletti]
